Fix #10045.

- app_server's FontManager also needs to watch ~/config/non-packaged/fonts.